[gd_scene load_steps=4 format=3 uid="uid://4shfjcdv4qki"]

[ext_resource type="Script" path="res://main/game_over_menu.gd" id="1_wvtp1"]
[ext_resource type="FontFile" uid="uid://bffvy5h8il4s8" path="res://gui/at01.ttf" id="2_5ga0v"]
[ext_resource type="Texture2D" uid="uid://dakukadavyxll" path="res://gui/try_again_button.png" id="3_cus51"]

[node name="GameOverMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wvtp1")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.784314)

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -47.5
offset_bottom = 47.5
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="ColorRect/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="Label" type="Label" parent="ColorRect/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_5ga0v")
text = "GAME OVER"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
alignment = 1

[node name="ScoreLabel" type="Label" parent="ColorRect/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_5ga0v")
text = "Score:"

[node name="TimeLabel" type="Label" parent="ColorRect/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/line_spacing = 0
theme_override_fonts/font = ExtResource("2_5ga0v")
text = "Played Time: "

[node name="TryAgainButton" type="TextureButton" parent="ColorRect/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("3_cus51")

[connection signal="pressed" from="ColorRect/VBoxContainer/TryAgainButton" to="." method="_on_try_again_button_pressed"]
